--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,6 +1,12 @@
 <template name="layout">
 		{{>navigation}}
-	<div class="container">
-		{{>yield}}
+
+	<div class="container-fluid">
+		<div class="row">
+			
+			{{>yield}}
+		
+		</div>
 	</div>
+	
 </template>
