--- a/client/templates/site_view/site_view.html
+++ b/client/templates/site_view/site_view.html
@@ -1,17 +1,38 @@
-<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+<template name="site_view">
+
+
+<div class="row">
+  <div class="col-md-8 col-xs-12">
+    
+
+    <div class="SiteViewMapContainer">
+      {{> googleMap name="site_view_map" options= site_view_map_options}}
     </div>
+    
+
   </div>
+  
+
+  <div class="col-md-4 ">
+
+    <div class="SiteViewInfoContainer">
+  
+      <h1> {{siteID}} </h1> <h2>{{SiteName}}</h2>
+
+      <span class="ImageContainer">
+        
+
+      </span>
+
+      <p>{{Desc}}</p>
+
+    </div>
+    
+
+  </div>
+  
 </div>
+
+
+
+</template>
