--- a/client/templates/navigation/navigation.html
+++ b/client/templates/navigation/navigation.html
@@ -17,12 +17,19 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/">Home</a></li>
 				<li><a href="{{pathFor route='about'}}">About</a></li>
+				<li><a href="{{pathFor route='site_list'}}">Site List</a></li>
 			</ul>
 			<form class="navbar-form navbar-right" role="search">
+
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search">
+						{{> esInput index="sites" placeholder="Sites Search" type="input" class="form-control"}}
 				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
+				<ul class="list-group">
+ 				       {{#esEach index="sites"}}
+ 				          <li id="{{siteID}}" class="list-group-item">{{siteID}}: {{SiteName}} </li>
+ 				       {{/esEach}}
+ 				</ul>
+
 			</form>
 		</div><!-- /.navbar-collapse -->
 	</nav>
